# rust-ownership

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  build.rs
src/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  main.rs
src/error/: codes.rs  mod.rs  sources.rs
src/run/: cli.rs  header.rs  log.rs  mod.rs
